@@ -1,3 +1,9 @@
+2001-10-11  Alex Larsson  <alexl@redhat.com>
+
+	* gnome-desktop-item.c (ditem_execute, gnome_desktop_item_launch):
+	Convert app launching to new api. Not tested yet, but at least
+	compiles.
+
 2001-10-10  Alex Larsson  <alexl@redhat.com>
 
 	* gnome-desktop-item.c (escape_string_and_dup,
